argocd/apps/00-node-metrics-namespace.yaml
# 00-node-metrics-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-metrics
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce: privileged
