argocd/apps/10-jenkins-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    vault-injection: enabled
